# tack

./: .gitignore  README.md  pyproject.toml
completions/: tack.fish
tack/: __main__.py  api.py  cli.py  colors.py  complete.py  db.py  docs.py  helpers.py  models.py  progress.py
